--- a/styles.css
+++ b/styles.css
@@ -78,25 +78,10 @@ body {
     color: #fff;
 }
 
-.founders-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.founders-content {
-    flex: 1;
-    margin-right: 1rem;
-}
-
-.founder-image {
-    max-width: 10%;
-    height: auto;
-}
 
 .header-text {
     flex: 1; /* This ensures the text takes up the available space */
-    padding-left: 65px;
+    padding-left: 73px;
     text-align: center; /* Adjust text alignment if needed */
 }
 
@@ -104,6 +89,40 @@ body {
 {
     max-width: 4%;
     float: right;
-    height: auto; 
+    height: 70px;
+    width: 100px;
     margin-top: -10px;
+}
+.founders-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.image-and-text {
+    display: flex;
+    align-items: center; /* Center items vertically */
+}
+
+.founder-image {
+    width: 150px; /* Set the width of the image */
+    height: auto; /* Maintain aspect ratio */
+    margin-right: 20px; /* Space between image and text */
+}
+
+.founder-description {
+    font-size: 16px; /* Adjust font size as needed */
+}
+
+.founder-image
+{
+    height:180px;
+    width:180px;
+    margin-right:20px;
+}
+
+.LBPics
+{
+    height: 500px;
+    width: 250px;
 }
