--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,34 @@ body {
     flex: 1;
 }
 
-
+/* Basic Reset End */
 
 /* Header Styles */
 .header-default {
+    position: relative; /* Ensure the header is the containing block for the logo */
     background: #3a2424;
     color: #fff;
     padding: 1rem 0;
     text-align: center;
 }
+
+.header-text {
+    flex: 1; /* This ensures the text takes up the available space */
+    text-align: center; /* Adjust text alignment if needed */
+}
+
+.Logo {
+    position: absolute; /* Position the logo absolutely within the header */
+    right: 10px; /* Adjust as necessary */
+    top: 50%;
+    transform: translateY(-50%);
+    max-width: 70px;
+    max-height: 100px;
+}
+/* Header Styles End */
+
+
+
 
 /* Navigation Styles */
 .nav-default {
@@ -57,20 +76,28 @@ body {
 .nav-default ul li a:hover {
     text-decoration: underline;
 }
+/* Navigation Styles End */
+
+
+
 
 /* Main Content Styles */
 .main-default {
     padding: 1rem;
     flex: 1;
 }
+/* Main Content Styles End */
 
-/* Section Styles */
+
+
+/*Sections Default*/
 .section-default {
     margin-bottom: 1rem;
     padding: 1rem;
     background: #e9e9e9;
     border: 1px solid #ddd;
 }
+/*Sections end*/
 
 /* Footer Styles */
 .footer-default {
@@ -79,29 +106,18 @@ body {
     background: #3a2424;
     color: #fff;
 }
+/* Footer End*/
 
 
-.header-text {
-    flex: 1; /* This ensures the text takes up the available space */
-    padding-left: 73px;
-    text-align: center; /* Adjust text alignment if needed */
-}
 
-.Logo
-{
-    max-width: 4%;
-    float: right;
-    height: 70px;
-    width: 100px;
-    margin-top: -10px;
-}
+/*about us*/
 .founders-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.image-and-text {
+.founder-image-and-text {
     display: flex;
     align-items: center; /* Center items vertically */
 }
@@ -116,15 +132,40 @@ body {
     font-size: 16px; /* Adjust font size as needed */
 }
 
-.founder-image
-{
-    height:180px;
-    width:180px;
-    margin-right:20px;
+.founder-image {
+    height: 180px;
+    width: 180px;
+    margin-right: 20px;
 }
 
-.LBPics
-{
-    height: 500px;
-    width: 250px;
+.HunterHeader {
+    margin-left: 10px;
+}
+
+.JakobHeader {
+    margin-left: 8px;
+}
+/* about us end */
+
+
+
+
+
+/*Leaderboard*/
+
+.LB-image-and-text {
+    display: flex;
+}
+
+.LB-text {
+    display: flex;
+    align-items: center;
+}
+
+.LBPics-inner{
+    max-height: 400px;
+    max-width: 200px;
+    margin-right: 10px;
+    border: 5px solid #5f3b3b;
+    border-radius: 5px;
 }
