--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ body {
 .section-default {
     margin-bottom: 1rem;
     padding: 1rem;
+    border-radius: 5px;
     background: #e9e9e9;
     border: 1px solid #ddd;
 }
