csv, delete entry, more shit

--- a/templates/add_fish_form.html
+++ b/templates/add_fish_form.html
@@ -52,12 +52,14 @@
                         <option value="Popper">Popper</option>
                         <option value="Soft Plastic">Soft Plastic</option>
                         <option value="Spinner">Spinner</option>
+                        <option value="Spunky Sperm">Spunky Sperm</option>
                         <option value="Spoon">Spoon</option>
                         <option value="Texas Rig">Texas Rig</option>
                         <option value="Wacky Worm">Wacky Worm</option>
                         <option value="Whopper Plopper">Whopper Plopper</option>
                         <option value="Misc Topwater">Misc Topwater</option>
                         <option value="Misc">Misc</option>
+                        <option value="Unknown">Unknown</option>
                     </select>
                     <br><br>
                     
