--- a/templates/add_fish_form.html
+++ b/templates/add_fish_form.html
@@ -34,11 +34,12 @@
                         <option value="Blue Gill">Blue Gill</option>
                         <option value="Crappie">Crappie</option>
                         <option value="Sloppy Mouth">Sloppy Mouth</option>
+                        <option value="Smallie">Smallie</option>
                     </select>
                     <br><br>
                     
                     <label for="weight">Weight:</label>
-                    <input type="number" id="weight" name="weight" min="1" step="1" placeholder="Enter weight">
+                    <input type="number" id="weight" name="weight" min="0" step="0.01" placeholder="Enter weight">
                     <br><br>
                     
                     <label for="bait">Bait:</label>
@@ -48,7 +49,9 @@
                         <option value="Crankbait">Crankbait</option>
                         <option value="Frog">Frog</option>
                         <option value="Jerkbait">Jerkbait</option>
+                        <option value="Jig">Jig</option>
                         <option value="Jitterbug">Jitterbug</option>
+                        <option value="The Load (Big Bertha)">The Load (Big Bertha)</option>
                         <option value="Popper">Popper</option>
                         <option value="Soft Plastic">Soft Plastic</option>
                         <option value="Spinner">Spinner</option>
